--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                     <!-- </div> -->
                 <!-- </form> -->
                 <div class="col-md-12 col-lg-9 col-md-10 text-center" >
-                  <div class='emailfont'> reach1heart@gmail.com </div>
+                    <div> <span class='emailfont'> reach1heart@gmail.com </span> </div>
                     <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook " aria-hidden="true" style='font-size: 50px;color:white; padding:10px'></i></a>
                     <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram"  style='font-size: 50px;color:white; padding:10px'></i></a>
                 </div>
