--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                                 <div class="testimonia-block width-90 sm-width-100 mx-auto" >
                                     <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: 0 10px 20px #f2f0f0; border-radius:5px;'  >
                                       <img class= 'pad_img' src="images/page.jpg"  >
-                                      <img class= 'pad_img' src="images/page2.jpg"  >
+                                      <img class= 'pad_img2' src="images/page2.jpg"  >
 
                                       <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> Join Our Online Summer Art Camp 2020!  </span>
                                          <div class=" padding-10px-top ">
@@ -778,6 +778,32 @@ box-shadow: 0 10px 20px #f2f0f0; border-radius:5px; height: 100px; width:100%
 }}
 
 
+.pad_img2{
+box-shadow: 0 10px 20px #f2f0f0; border-radius:5px; height: 170px; width:70%
+}
+@media (min-width: 1200px) {
+.pad_img2{
+box-shadow: 0 10px 20px #f2f0f0; border-radius:5px; height: 170px; width:70%
+}}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+.pad_img2{
+box-shadow: 0 10px 20px #f2f0f0; border-radius:5px; height: 170px; width:70%
+}}
+@media (min-width: 768px) and (max-width: 991.98px) {
+.pad_img2{
+box-shadow: 0 10px 20px #f2f0f0; border-radius:5px; height: 150px; width:70%
+}}
+@media (min-width: 576px) and (max-width: 767.98px) {
+.pad_img2{
+box-shadow: 0 10px 20px #f2f0f0; border-radius:5px; height: 150px; width:70%
+}}
+@media (max-width: 575.98px) {
+.pad_img2{
+box-shadow: 0 10px 20px #f2f0f0; border-radius:5px; height: 100px; width:70%
+}}
+
+    
+    
 
 .emailfont{
 font-family: 'Jost'; font-weight:900; font-size:35px; padding:50px; color:white
