--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
               <div class="modal-body" >
                 <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '>
                     <div class = "col-md-12" style='padding-top:10px'>
-                    <img src="images/camp.png"  style=' border-radius:5px; height: 550px; width:650px'>
+                    <img src="images/camp.png"  class= 'modal_img'>
                    </div>
                </div>
               </div>
@@ -827,6 +827,31 @@ font-family: 'Jost'; font-weight:900; font-size:20px; padding:10px; color:white
 @media (max-width: 575.98px) {
 .emailfont{
 font-family: 'Jost'; font-weight:900; font-size:20px; padding:10px; color:white
+}}
+    
+    
+ .modal_img{
+border-radius:5px; height: 550px; width:650px
+}
+@media (min-width: 1200px) {
+ .modal_img{
+border-radius:5px; height: 550px; width:650px
+}}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+ .modal_img{
+border-radius:5px; height: 550px; width:650px
+}}
+@media (min-width: 768px) and (max-width: 991.98px) {
+ .modal_img{
+border-radius:5px; height: 550px; width:650px
+}}
+@media (min-width: 576px) and (max-width: 767.98px) {
+ .modal_img{
+border-radius:5px; height: 350px; width:450px
+}}
+@media (max-width: 575.98px) {
+ .modal_img{
+border-radius:5px; height: 350px; width:450px
 }}
 
 </style>
