--- a/index.html
+++ b/index.html
@@ -847,11 +847,11 @@ border-radius:5px; height: 550px; width:650px
 }}
 @media (min-width: 576px) and (max-width: 767.98px) {
  .modal_img{
-border-radius:5px; height: 350px; width:450px
+border-radius:5px; height: 250px; width:100%
 }}
 @media (max-width: 575.98px) {
  .modal_img{
-border-radius:5px; height: 350px; width:450px
+border-radius:5px; height: 250px; width:100%
 }}
 
 </style>
