--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                  </p>
                  <p class="width-90 md-width-100" style='color:black;font-family: jost; font-size: 20px; font-weight: 500'>  Critical thinking skills develop as children practice making plans about their creations, solve problems that arise and find different ways to weave unrelated ideas together.
                  </p>
-                 <p class="width-90 md-width-100" style='color:black;font-family: jost; font-size: 20px; font-weight: 500'>  Art cultivates cultural awareness in children as they develop an understanding about the differences between themselves and people from other countries, cultures and backgrounds.
+                 <p class="width-90 md-width-100" style='color:black;font-family: jost; font-size: 20px; font-weight: 500'>  Art cultivates cultural awareness in children as they develop an understanding about the differences and similarities between themselves and people from other countries, cultures and backgrounds.
                  </p>
                </div>
                 </div>
