--- a/index.html
+++ b/index.html
@@ -536,7 +536,8 @@
                                       <img class= 'pad_img' src="images/page.jpg"  >
                                       <img class= 'pad_img2' src="images/page2.jpg"  >
 
-                                      <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> Join Our Online Summer Art Camp 2020!  </span>
+                                      <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> Kids Zoom Art Experience!  </span>
+                                        <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:23px;padding-top: 30px; color:black; font-weight:500'> After School Art Program On Modern And Contemporary Art Creations  </span>
                                          <div class=" padding-10px-top ">
                                            <button type="button" data-toggle="modal" data-target="#write" class="btn btn-small" style='padding:0px'>
                                            <span style='font-size:12px; color:black'> Read More </span>
@@ -631,7 +632,7 @@
               <div class="modal-body" >
                 <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '>
                     <div class = "col-md-12" style='padding-top:10px'>
-                    <img src="images/camp.png"  class= 'modal_img'>
+                    <img src="images/zoomart.jpg"  class= 'modal_img'>
                    </div>
                </div>
               </div>
