--- a/index.html
+++ b/index.html
@@ -537,10 +537,10 @@
                                       <img class= 'pad_img2' src="images/page2.jpg"  >
 
                                       <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> Kids Zoom Art Experience!  </span>
-                                        <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:23px;padding-top: 30px; color:black; font-weight:500'> After School Art Program On Modern And Contemporary Art Creations  </span>
+                                        <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:23px;padding-top: 10px; color:black; font-weight:500'> After School Art Program On Modern And Contemporary Art Creations  </span>
                                          <div class=" padding-10px-top ">
                                            <button type="button" data-toggle="modal" data-target="#write" class="btn btn-small" style='padding:0px'>
-                                           <span style='font-size:12px; color:black'> Read More </span>
+                                           <span class ="text-deep-pink" style='font-size:12px'> Read More </span>
                                            </button>
                                         </div>
                                     </div>
