--- a/index.html
+++ b/index.html
@@ -533,16 +533,18 @@
                     <div class="row justify-content-center m-0">
                                 <div class="testimonia-block width-90 sm-width-100 mx-auto" >
                                     <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: 0 10px 20px #f2f0f0; border-radius:5px;'  >
-                                      <img class= 'pad_img' src="images/page.jpg"  >
-                                      <img class= 'pad_img2' src="images/page2.jpg"  >
+<!--                                     <img class= 'pad_img' src="images/page.jpg"  > --> 
+<!--                                       <img class= 'pad_img2' src="images/page2.jpg"  > -->
 
-                                      <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> Kids Zoom Art Experience!  </span>
-                                        <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:23px;padding-top: 10px; color:black; font-weight:500'> After School Art Program On Modern And Contemporary Art Creations  </span>
-                                         <div class=" padding-10px-top ">
-                                           <button type="button" data-toggle="modal" data-target="#write" class="btn btn-small" style='padding:0px'>
-                                           <span class ="text-deep-pink" style='font-size:12px'> Read More </span>
-                                           </button>
-                                        </div>
+                                      <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span>
+                                        
+
+<!--                                          <div class=" padding-10px-top "> -->
+<!--                                            <button type="button" data-toggle="modal" data-target="#write" class="btn btn-small" style='padding:0px'> -->
+<!--                                            <span class ="text-deep-pink" style='font-size:12px'> Read More </span> -->
+<!--                                            </button> -->
+<!--                                         </div> -->
+                                       <img src="images/zoomart.jpg"  class='modal_img'>
                                     </div>
 
                     </div>
