--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 <!--                                            <span class ="text-deep-pink" style='font-size:12px'> Read More </span> -->
 <!--                                            </button> -->
 <!--                                         </div> -->
-                                       <img src="images/zoomart.jpg"  class='modal_img'>
+                                       <img src="images/zoomart.jpg"  style=" height: 100%; width:100%" >
                                     </div>
 
                     </div>
