--- a/index.html
+++ b/index.html
@@ -544,7 +544,9 @@
 <!--                                            <span class ="text-deep-pink" style='font-size:12px'> Read More </span> -->
 <!--                                            </button> -->
 <!--                                         </div> -->
+                                        <div class="col-md-12">
                                        <img src="images/zoomart.jpg"  style=" height: 100%; width:100%" >
+                                        </div>
                                     </div>
 
                     </div>
