--- a/index.html
+++ b/index.html
@@ -544,9 +544,11 @@
 <!--                                            <span class ="text-deep-pink" style='font-size:12px'> Read More </span> -->
 <!--                                            </button> -->
 <!--                                         </div> -->
-                                        <div class="col-md-12">
-                                       <img src="images/zoomart.jpg"  style=" height: 100%; width:100%" >
-                                        </div>
+                                      <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '>
+                                      <div class = "col-md-12" style='padding-top:10px'>
+                                      <img src="images/zoomart.jpg"  class='modal_img'>
+                                      </div>
+                                      </div>
                                     </div>
 
                     </div>
