--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       <div class="tp-caption tp-resizeme rs-parallaxlevel-1 mbw"
                              id="slide-3238-layer-1"
                              data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                             data-y="['middle','middle','middle','middle']" data-voffset="['-60','-60','-60','-90']"
+                             data-y="['middle','middle','middle','middle']" data-voffset="['-80','-80','-80','-110']"
                              data-fontsize="['70','70','70','50']"
                              data-lineheight="['80','80','80','60']"
                              data-width="['none','none','none','360']"
@@ -337,15 +337,15 @@
                              data-paddingbottom="[0,0,0,0]"
                              data-paddingleft="[0,0,0,0]"
                              style="z-index: 9999;">
-                             <span id = 'content' class="alt-font text-extra-dark-gray " style='font-family: jost; font-weight: 900; font-size:50px'> reach heART </span>
+                             <span id = 'content' class="alt-font text-extra-dark-gray " style='font-family: jost; font-weight: 900; font-size:50px;'> reach heART </span>
                              <span id="updated"></span>
                            </div>
                   <div class="tp-caption tp-resizeme rs-parallaxlevel-1 mbw"
                              id="slide-3238-layer-1"
                              data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                             data-y="['middle','middle','middle','middle']" data-voffset="['10','10','10','-10']"
+                             data-y="['middle','middle','middle','middle']" data-voffset="['40','40','40','40']"
                              data-fontsize="['36','36','36','36']"
-                             data-lineheight="['30','30','30','30']"
+                             data-lineheight="['38','38','38','38']"
                              data-width="['none','none','none','360']"
                              data-height="none"
                              data-whitespace="['nowrap','nowrap','nowrap','normal']"
@@ -357,7 +357,7 @@
                              data-paddingright="[0,0,0,0]"
                              data-paddingbottom="[0,0,0,0]"
                              data-paddingleft="[0,0,0,0]"
-                             style="z-index: 9999;  white-space: nowrap;  font-weight: 400; font-family: jost; border-width:0px;margin-top:50px;  " ><span style='font-size: 30px; color:black;margin-top:50px;font-weight:900'> Virtual art lessons for kids everywhere! </span></div>
+                             style="z-index: 9999;  white-space: nowrap;  font-weight: 400; font-family: jost; border-width:0px; " ><span style='font-size: 30px; color:black;font-weight:900; line-height:38px'> Virtual art lessons for kids everywhere! </span></div>
                     </li>
                 </ul>
                 <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>	</div>
@@ -513,7 +513,7 @@
 
               <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center">
-                    <div class="alt-font  margin-15px-bottom"  style='font-family: jost;color:black;  font-size: 35px ;font-weight:900; '> <span > Virtual Art Classes </span>
+                    <div class="alt-font  margin-15px-bottom"  style='font-family: jost;color:black;  font-size: 35px ;font-weight:900; line-height:37px '> <span > Virtual Art Classes </span>
                       <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light "style='background-color:#ff9a00;margin-top: 30px'></div></div>
                   </div>
                   </div>
@@ -660,18 +660,18 @@ var color = (toStr.replace('\/g', '|')).substring(1);
 var colors = color.split("|");
 
 if (colors.indexOf("red") > -1) {
-    str = str.replace(/A/g, '<span style="color:#ff165d; font-size: 110px; font-weight: 900;font-family:jost; ">A</span>');
+    str = str.replace(/A/g, '<span style="color:#ff165d; font-size: 110px; font-weight: 900;font-family:jost; line-height:120px ">A</span>');
 }
 
 if (colors.indexOf("blue") > -1) {
-    str = str.replace(/R/g, '<span style="color:#3ec1d3; font-size: 110px; font-weight: 900;font-family:jost">R</span>');
+    str = str.replace(/R/g, '<span style="color:#3ec1d3; font-size: 110px; font-weight: 900;font-family:jost;line-height:120px ">R</span>');
 }
 
 if (colors.indexOf("orange") > -1) {
-    str = str.replace(/T/g, '<span style="color:#ff9a00; font-size: 110px;font-weight: 900;font-family:jost">T</span>');
+    str = str.replace(/T/g, '<span style="color:#ff9a00; font-size: 110px;font-weight: 900;font-family:jost; line-height:120px ">T</span>');
 }
 if (colors.indexOf("green") > -1) {
-    str = str.replace(/reach he/g, '<span style="color:black; font-size: 110px;font-family:jost">Reach he</span>');
+    str = str.replace(/reach he/g, '<span style="color:black; font-size: 110px;font-family:jost;line-height:120px ">Reach he</span>');
 }
 document.getElementById("updated").innerHTML = str;
 
