--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                                       <!-- <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span> -->
                                       <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '>
                                       <div class = "col-md-12" style='padding-top:10px'>
-                                      <img src="images/october.png"  >
+                                      <img src="images/uart.png"  >
                                       </div>
                                       </div>
                                     </div>
@@ -555,13 +555,13 @@
                     <div class="row justify-content-center m-0">
                                 <div class="testimonia-block width-90 sm-width-100 mx-auto" >
                                     <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: 0 10px 20px #f2f0f0; border-radius:5px;'  >
-<!--                                        <a href='https://my.coachart.org/give/305188/?fbclid=IwAR12463RI5Nipe8LK7yHTymlCyUVt6pLAki33gnZgZClmHESxNfaGvRFIuo#!/donation/checkout'><button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px; font-family:Jost; margin-bottom:20px"> -->
-<!--                                      Click Here to Register -->
-<!--                                            </button></a> -->
-                                    <!-- <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span> -->
+                                        <a href='https://my.coachart.org/give/305188/?fbclid=IwAR12463RI5Nipe8LK7yHTymlCyUVt6pLAki33gnZgZClmHESxNfaGvRFIuo#!/donation/checkout'><button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px; font-family:Jost; margin-bottom:20px"> -->
+                                     Click Here to Register 
+                                            </button></a>
+                                    <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span> -->
                                       <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '>
                                       <div class = "col-md-12" style='padding-top:10px'>
-                                      <img src="images/uart.png"  >
+                                      <img src="images/haloween.png"  >
                                       </div>
                                       </div>
                                     </div>
