--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                                     <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span> -->
                                       <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '>
                                       <div class = "col-md-12" style='padding-top:10px'>
-                                      <img src="images/haloween.png"  >
+                                      <img src="images/haloween.jpg"  >
                                       </div>
                                       </div>
                                     </div>
