--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                             <li class="dropdown megamenu-fw">
                                 <a href="#art" style='font-family: jost; font-size: 17px;font-weight:400'>Virtual Art</a>
                             </li>
-                            <li class="dropdown megamenu-fw">
-                                <a href="#events" style='font-family: jost; font-size: 17px;font-weight:400'>Events</a>
-                            </li>
+<!--                             <li class="dropdown megamenu-fw"> -->
+<!--                                 <a href="#events" style='font-family: jost; font-size: 17px;font-weight:400'>Events</a> -->
+<!--                             </li> -->
                             <li class="dropdown megamenu-fw">
                                 <a href="#contact" style='font-family: jost; font-size: 17px;font-weight:400'>Contact</a>
                             </li>
@@ -539,38 +539,38 @@
         </section>
 
 
-        <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="6" style="background: url('images/.png') left bottom no-repeat " id='events'>
-             <div class="container" style='margin-top: 20px; padding-bottom:0px'>
+<!--         <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="6" style="background: url('images/.png') left bottom no-repeat " id='events'> -->
+<!--              <div class="container" style='margin-top: 20px; padding-bottom:0px'> -->
 
-              <div class="row justify-content-center">
-                  <div class="col-12 col-lg-9 col-md-10 text-center">
-                    <div class="alt-font  margin-15px-bottom"  style='font-family: jost;color:black;  font-size: 35px ;font-weight:900; '> <span > Special Events </span>
-                      <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light bg-deep-pink "style='margin-top: 30px'></div></div>
-                  </div>
-                  </div>
-               </div>
-        <div class="row">
-        <div class="col-md-12" style="margin-top:50px">
-                <div class=" page-title-medium text-center d-flex flex-column justify-content-center" >
-                    <div class="row justify-content-center m-0">
-                                <div class="testimonia-block width-90 sm-width-100 mx-auto" >
-                                    <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: 0 10px 20px #f2f0f0; border-radius:5px;'  >
-                                        <a href='https://my.coachart.org/give/305188/?fbclid=IwAR12463RI5Nipe8LK7yHTymlCyUVt6pLAki33gnZgZClmHESxNfaGvRFIuo#!/donation/checkout'><button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px; font-family:Jost; margin-bottom:20px"> 
-                                     Click Here to Register 
-                                            </button></a>
-                                    <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span> -->
-                                      <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '>
-                                      <div class = "col-md-12" style='padding-top:10px'>
-                                      <img src="images/halloween.jpg"  >
-                                      </div>
-                                      </div>
-                                    </div>
-                    </div>
-                </div>
-            </div>
-           </div>
-          </div>
-        </section>
+<!--               <div class="row justify-content-center"> -->
+<!--                   <div class="col-12 col-lg-9 col-md-10 text-center"> -->
+<!--                     <div class="alt-font  margin-15px-bottom"  style='font-family: jost;color:black;  font-size: 35px ;font-weight:900; '> <span > Special Events </span> -->
+<!--                       <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light bg-deep-pink "style='margin-top: 30px'></div></div> -->
+<!--                   </div> -->
+<!--                   </div> -->
+<!--                </div> -->
+<!--         <div class="row"> -->
+<!--         <div class="col-md-12" style="margin-top:50px"> -->
+<!--                 <div class=" page-title-medium text-center d-flex flex-column justify-content-center" > -->
+<!--                     <div class="row justify-content-center m-0"> -->
+<!--                                 <div class="testimonia-block width-90 sm-width-100 mx-auto" > -->
+<!--                                     <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: 0 10px 20px #f2f0f0; border-radius:5px;'  > -->
+<!--                                         <a href='https://my.coachart.org/give/305188/?fbclid=IwAR12463RI5Nipe8LK7yHTymlCyUVt6pLAki33gnZgZClmHESxNfaGvRFIuo#!/donation/checkout'><button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px; font-family:Jost; margin-bottom:20px">  -->
+<!--                                      Click Here to Register  -->
+<!--                                             </button></a> -->
+<!--                                     <span class="d-block margin-four-bottom md-margin-two-bottom " style='background:white; font-family:jost; font-size:25px;padding-top: 30px; color:black; font-weight:900'> After School Art! </span> --> -->
+<!--                                       <div class= 'row' style='padding-left: 25px;padding-right: 25px; padding-bottom:10px; padding-top:0px; background:white; '> -->
+<!--                                       <div class = "col-md-12" style='padding-top:10px'> -->
+<!--                                       <img src="images/halloween.jpg"  > -->
+<!--                                       </div> -->
+<!--                                       </div> -->
+<!--                                     </div> -->
+<!--                     </div> -->
+<!--                 </div> -->
+<!--             </div> -->
+<!--            </div> -->
+<!--           </div> -->
+<!--         </section> -->
 
 
 
