--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
 
 <br><br>
-        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="3" id='lessons'>
+        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="3" >
           <div class="col-md-12 text-center ">
             <div class="alt-font  margin-15px-bottom"  style='font-family: jost;color:black;  font-size: 45px ;font-weight:900; line-height:47px '> <span > More About Us </span>
               <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light "style='background-color:#3ec1d3;margin-top: 30px'></div></div>
@@ -472,7 +472,7 @@
 
 
 
-        <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="6" style="background: url('images/.png') left bottom no-repeat " id='art'>
+        <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="6" style="background: url('images/.png') left bottom no-repeat " id='lessons'>
              <div class="container" style='margin-top: 120px; padding-bottom:0px'>
               <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center">
