--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                   data-paddingright="[0,0,0,0]"
                                   data-paddingbottom="[0,0,0,0]"
                                   data-paddingleft="[0,0,0,0]"
-                                  style="z-index: 6;border-width:0px;"><img src="images/a2.jpg" style='transform: rotate(-19deg); box-shadow: 0 10px 20px grey ' alt="" data-ww="['250px','250px','250px','250px']" data-hh="['187px','187px','187px','187px']" width="550" height="471" data-no-retina> </div>
+                                  style="z-index: 6;border-width:0px;"><img src="images/a10.jpg" style='transform: rotate(-19deg); box-shadow: 0 10px 20px grey ' alt="" data-ww="['250px','250px','250px','250px']" data-hh="['187px','187px','187px','187px']" width="550" height="471" data-no-retina> </div>
               <div class="tp-caption tp-resizeme rs-parallaxlevel-9"
                                        id="slide-3238-layer-5"
                                        data-x="['right','right','right','right']" data-hoffset="['-80','-80','-80','-84']"
@@ -208,7 +208,7 @@
                              data-paddingright="[0,0,0,0]"
                              data-paddingbottom="[0,0,0,0]"
                              data-paddingleft="[0,0,0,0]"
-                             style="z-index: 12;border-width:0px;"><img src="images/a10.jpg" style='transform: rotate(5deg);box-shadow: 0 10px 20px grey ' alt="" data-ww="['330px','330px','330px',330px']" data-hh="['330px','330px','330px','330px']"  data-no-retina> </div>
+                             style="z-index: 12;border-width:0px;"><img src="images/a2.jpg" style='transform: rotate(5deg);box-shadow: 0 10px 20px grey ' alt="" data-ww="['330px','330px','330px',330px']" data-hh="['300px','300px','300px','300px']"  data-no-retina> </div>
 
 
   <div class="tp-caption tp-resizeme rs-parallaxlevel-1 mbw"
@@ -232,7 +232,7 @@
                          <span id = 'content' class="alt-font text-extra-dark-gray " style='font-family: jost; font-weight: 900; font-size:50px;'> reach heART </span>
                          <span id="updated"></span>
                        </div>
-              <div class="tp-caption tp-resizeme rs-parallaxlevel-1 mbw3"
+  <div class="tp-caption tp-resizeme rs-parallaxlevel-1 mbw3"
                          id="slide-3238-layer-1"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                          data-y="['middle','middle','middle','middle']" data-voffset="['40','40','40','40']"
@@ -249,7 +249,33 @@
                          data-paddingright="[0,0,0,0]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
-                         style="z-index: 9999;  white-space: nowrap;  font-weight: 300; font-family: jost; border-width:0px; " ><span style='font-size: 30px; color:black;font-weight:400; line-height:38px'> Virtual art lessons for people everywhere! </span></div>
+                         style="z-index: 9999;  white-space: nowrap;  font-weight: 300; font-family: jost; border-width:0px; " ><span style='font-size: 38px; color:black;font-weight:400; line-height:40px'> Virtual art lessons for people everywhere! </span></div>
+
+
+                         <div class="tp-caption tp-resizeme rs-parallaxlevel-10"
+                                          id="slide-3238-layer-6"
+                                                data-x="['center','center','center','center']" data-hoffset="['-35','-35','-35','-35']"
+                                                data-y="['bottom','bottom','bottom','bottom']" data-voffset="['100','100','100','100']"
+                                                data-fontsize="['70','70','70','50']"
+                                                data-lineheight="['80','80','80','60']"
+                                                data-width="['none','none','none','360']"
+                                                data-height="none"
+                                                data-whitespace="['nowrap','nowrap','nowrap','normal']"
+                                                data-type="text"
+                                                data-responsive_offset="on"
+                                                data-frames='[{"from":"x:left;rZ:45deg;","speed":2500,"to":"o:1;","delay":650,"ease":"Power4.easeOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
+                                                data-textAlign="['center','center','center','center']"
+                                                data-paddingtop="[0,0,0,0]"
+                                                data-paddingright="[0,0,0,0]"
+                                                data-paddingbottom="[0,0,0,0]"
+                                                data-paddingleft="[0,0,0,0]"
+                                                style="z-index: 9999;">
+                                                <i class="icon-heart icon-extra-medium text-deep-pink" style='font-weight:900'></i>
+                                                <i class="icon-heart icon-extra-medium " style='font-weight:900; color:#3ec1d3'></i>
+                                                  <i class="icon-heart icon-extra-medium " style='font-weight:900; color:#ff9a00'></i>
+                                              </div>
+
+
                 </li>
             </ul>
             <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>	</div>
@@ -338,7 +364,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-lg-4 text-center text-lg-left md-margin-40px-bottom sm-margin-30px-bottom wow fadeIn">
 
-                        <h5 class="text-uppercase alt-font text-extra-dark-gray font-weight-700 width-75 d-block mb-0 lg-width-90 md-width-100" style='font-family: jost;  font-size: 35px ;font-weight:900; line-height:40px'>Connection to the Community</h5>
+                        <h5 class="text-uppercase alt-font text-extra-dark-gray font-weight-700 width-75 d-block mb-0 lg-width-90 md-width-100" style='font-family: jost;  font-size: 35px ;font-weight:900; line-height:40px'>Connection to Community</h5>
                     </div>
                     <div class="col-12 col-lg-4 col-md-6 sm-margin-30px-bottom wow fadeIn">
                         <img class="padding-ten-right md-no-padding-right w-100" src="images/maskon.jpg" alt="">
@@ -358,7 +384,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-lg-4 text-center text-lg-left md-margin-40px-bottom sm-margin-30px-bottom wow fadeIn">
-                      <h5 class="text-uppercase alt-font text-extra-dark-gray font-weight-700 width-75 d-block mb-0 lg-width-90 md-width-100" style='font-family: jost;  font-size: 35px ;font-weight:900; line-height:40px'>Art of Presentfullness</h5>
+                      <h5 class="text-uppercase alt-font text-extra-dark-gray font-weight-700 width-75 d-block mb-0 lg-width-90 md-width-100" style='font-family: jost;  font-size: 35px ;font-weight:900; line-height:40px'>Art of Presentfulness</h5>
                     </div>
                     <div class="col-12 col-lg-4 col-md-6 sm-margin-30px-bottom wow fadeIn">
                         <img class="padding-ten-right md-no-padding-right w-100" src="images/kido.jpg" alt="">
@@ -374,7 +400,7 @@
 
 
 <br><br>
-        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="3" >
+        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="3" id='lessons'>
           <div class="col-md-12 text-center ">
             <div class="alt-font  margin-15px-bottom"  style='font-family: jost;color:black;  font-size: 45px ;font-weight:900; line-height:47px '> <span > More About Us </span>
               <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light "style='background-color:#3ec1d3;margin-top: 30px'></div></div>
@@ -451,28 +477,10 @@
           </div>
         </section>
 
-        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="5">
-          <div class="container" >
-              <div class="row align-items-center">
-                  <div class="col-12 col-lg-6 pad" >
-                 <i class="fas fa-quote-left text-deep-pink icon-medium margin-15px-bottom"></i>
-                 <h5 class="text-extra-dark-gray alt-font font-weight-600" style='color:black; font-family: jost; font-weight:900'>Creating art for others nourishes paths of connection to the world we are all a part of </h5>
-                 <p class="width-90 md-width-100" style='color:black;font-family: jost; font-size: 20px; font-weight: 500'>  Encouraging children to also think of others in their lives, their community, and their world with their art cultivates compassion, empathy, and connectedness.
-                 </p>
-                 <p class="width-90 md-width-100" style='color:black;font-family: jost; font-size: 20px; font-weight: 500'>  They begin to develop an understanding of how they can positively impact others as well as bring joy, hope, gratitude and love.
-                </p>
-                </div>
-                <div class="col-12 col-lg-6 sm-no-padding text-center">
-                        <img src="images/addy.jpg"  style='box-shadow: none; ; height: 450px; width:450px;'>
-                </div>
-                </div>
-              </div>
-          </div>
-        </section>
 
 
 
-        <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="6" style="background: url('images/.png') left bottom no-repeat " id='lessons'>
+        <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="6" style="background: url('images/.png') left bottom no-repeat " id='art'>
              <div class="container" style='margin-top: 120px; padding-bottom:0px'>
               <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center">
