--- a/index.html
+++ b/index.html
@@ -584,7 +584,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 col-md-12 text-center text-white-2" style="font-weight:900; font-family:Jost">
-                        <span>Website Design: Calibri Inc.<a href="" class="text-white-2" target="_blank" title=""></a></span>
+                        <span>Website Design: Calibri Inc.<a href="mailto:info@calibri.co?subject=Mail" class="text-white-2" target="_blank" title=""></a></span><br>
+                        <span>info@calibri.co<a href="mailto:info@calibri.co?subject=Mail" class="text-white-2" target="_blank" title=""></a></span>
+                        <span>| calibri.co<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""></a></span><br>
                     </div>
                 </div>
             </div>
