--- a/index.html
+++ b/index.html
@@ -613,10 +613,10 @@
           <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-12 col-md-12 text-center text-white-2" style="font-weight:900; font-family:Didact Gothic">
-                        <span>Website Design: Calibri Inc.<a href="mailto:info@calibri.co?subject=Mail" class="text-white-2" target="_blank" title=""></a></span><br>
-                        <span>info@calibri.co<a href="mailto:info@calibri.co?subject=Mail" class="text-white-2" target="_blank" title=""></a></span>
-                        <span>| calibri.co<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""></a></span><br>
+                    <div class="col-lg-12 col-md-12 text-center text-white-2" style="font-weight:900; font-family:Didact Gothic; font-size:17px">
+                        <span>Website Design:<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""> Calibri Inc.</a></span><br>
+                        <span> <a href="mailto:info@calibri.co?subject=Mail" class="text-white-2" target="_blank" title=""> info@calibri.co </a></span>
+                        <span>|<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""> calibri.co</a></span><br>
                     </div>
                 </div>
             </div>
