--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
                         <div class="col-md-12 wow fadeInRight " data-wow-delay="0.4s"  style="padding-bottom: 20px">
                           <div class="feature-box-6 position-relative">
-                              <i class="icon-heart icon-medium " style='font-weight:900; '></i>
+                              <i class="icon-heart icon-medium text-deep-pink " style='font-weight:900; '></i>
                               <div class="alt-font text-extra-dark-gray font-weight-600 line-height-28" style='font-family: Didact Gothic; font-size: 20px'>Friends and family gatherings</div>
                           </div>
                       </div>
