--- a/index.html
+++ b/index.html
@@ -351,14 +351,14 @@
 
                            <div class="col-md-12 wow fadeInRight " data-wow-delay="0.2s" style="padding-bottom: 20px">
                             <div class="feature-box-6 position-relative">
-                                <i class="icon-heart icon-medium text-deep-pink" style='font-weight:900;color:#ff9a00'></i>
+                                <i class="icon-heart icon-medium text-deep-pink" style='font-weight:900;color:#3ec1d3'></i>
                                 <div class="alt-font text-extra-dark-gray font-weight-600 line-height-28" style='font-family: Didact Gothic; font-size: 20px;'>Scout meetings</div>
                             </div>
                         </div>
 
                         <div class="col-md-12 wow fadeInRight " data-wow-delay="0.2s" style="padding-bottom: 20px">
                             <div class="feature-box-6 position-relative">
-                                <i class="icon-heart icon-medium " style='font-weight:900; color:#3ec1d3'></i>
+                                <i class="icon-heart icon-medium " style='font-weight:900; color:#ff9a00'></i>
                                 <div class="alt-font text-extra-dark-gray font-weight-600 line-height-28" style='font-family: Didact Gothic; font-size: 20px;'>Any occasion that you can think of!</div>
                             </div>
                         </div>
