--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                          style="z-index: 9999;  white-space: nowrap;  font-weight: 300; font-family: Didact Gothic; border-width:0px; " ><span style='font-size: 38px; color:black;font-weight:400; line-height:40px'> Virtual art lessons for people everywhere! </span></div>
 
 
-                         <div class="tp-caption tp-resizeme rs-parallaxlevel-10"
+                         <div class="tp-caption tp-resizeme rs-parallaxlevel-10 hideit"
                                           id="slide-3238-layer-6"
                                                 data-x="['center','center','center','center']" data-hoffset="['-35','-35','-35','-35']"
                                                 data-y="['bottom','bottom','bottom','bottom']" data-voffset="['100','100','100','100']"
@@ -271,7 +271,7 @@
                                                 data-paddingbottom="[0,0,0,0]"
                                                 data-paddingleft="[0,0,0,0]"
                                                 style="z-index: 9999;">
-                                                <i class="icon-heart icon-extra-medium text-deep-pink" style='font-weight:900; font-size:80px'></i>
+                                                <i class="icon-heart icon-extra-medium text-deep-pink " style='font-weight:900; font-size:80px'></i>
                                                 <i class="icon-heart icon-extra-medium " style='font-weight:900; color:#3ec1d3; font-size:80px'></i>
                                                   <i class="icon-heart icon-extra-medium " style='font-weight:900; color:#ff9a00; font-size:80px'></i>
                                               </div>
@@ -288,11 +288,11 @@
                 <div class="container" >
                 <div class="row">
                       <div class="col-md-7 " >
-                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom"  style='font-family: Patrick Hand;  font-size: 45px ;font-weight:900; line-height:40px'>About</span> <span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
+                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext" >About</span> <span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
                                     <div class="separator-line-horrizontal-medium-light bg-deep-pink margin-10px-top"></div>
                                     <div class="col-md-12 wow fadeInRight " style="padding-bottom: 20px">
                                       <p class="text-medium text-extra-dark-gray  line-height-28 margin-30px-top"  style='font-family: Didact Gothic; font-size: 25px; font-weight:300;margin-bottom:40px;line-height:40px'><span style= "font-family:Comic Neue;font-weight:900">Reach heART</span>
-                                        is offering virtual art lessons, for all ages, in various settings that use art and “presentfulness” as the vehicle to cultivate self-love, self-awareness, emotional intelligence and nourish paths of connection to the world we are all a part of
+                                        is offering virtual art lessons, for all ages, in various settings that use art and “presentfulness” as the vehicle to cultivate self-love, self-awareness, emotional intelligence and nourish paths of connection to the world we are all a part of.
                                       </p>
                                       <div class="row" >
                                       <div class=col-md-6><img src="images/group1.png" width="100%" ></div>
@@ -369,7 +369,7 @@
     </section>
 
 
-    <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="3" style="background: url('images/.png') left bottom no-repeat" id='art'>
+    <section class="wow fadeIn color-code pt-0 lg-no-background-img sm-padding-50px-tb" data-color="3" style="background: url('images/.png') left bottom no-repeat" id='lessons'>
          <div class="container" style='margin-top: 80px; padding-bottom:0px'>
           <div class="row justify-content-center">
               <div class="col-12 col-lg-9 col-md-10 text-center">
@@ -410,7 +410,7 @@
 
 
 
-         <section class="wow fadeIn" data-color="4" id="art">
+         <section class="wow fadeIn" data-color="3" id="art">
            <div class="col-md-12  text-center">
              <div class="alt-font  margin-15px-bottom pointsection"  > <span > Our Values </span>
                <div align='center' style='padding-bottom:20px'><div class="separator-line-horrizontal-medium-light "style='background-color:#ff9a00;margin-top: 30px'></div><br></div>
@@ -438,7 +438,7 @@
             </div>
         </section>
 
-        <section class="wow fadeIn" data-color="3">
+        <section class="wow fadeIn" data-color="4">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-lg-3 text-center text-lg-left md-margin-40px-bottom sm-margin-30px-bottom wow fadeIn">
@@ -458,7 +458,7 @@
 
 
 <br>
-        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="3" id='lessons'>
+        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="4" >
           <div class="col-md-12 text-center ">
             <div class="alt-font  margin-15px-bottom pointsection"  >
               <div align='center' style='padding-bottom:20px'>      <i class="icon-heart icon-extra-medium text-deep-pink" style='font-weight:900; font-size:50px'></i>
@@ -484,7 +484,7 @@
           </div>
         </section>
 
-        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="4" >
+        <section class="wow fadeIn color-code p-0 sm-padding-50px-tb" data-color="6" >
           <div class="container" >
               <div class="row align-items-center">
                 <div class="col-12 col-lg-6 sm-no-padding text-center  order-1 order-lg-2 " align='right'>
@@ -536,6 +536,7 @@
                   </div>
               </div>
           </div>
+            <div id='contact' ></div>
         </section>
 
 
@@ -577,7 +578,7 @@
 
 
 
-      <section class="wow fadeIn color-code lg-no-background-img " data-color="6" id='contact' style="background: url('images/art2.png') top right no-repeat ; ">
+      <section class="wow fadeIn color-code lg-no-background-img " data-color="6" style="background: url('images/art2.png') top right no-repeat ; ">
             <div class="container" style='margin-top:0px'>
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center">
@@ -726,7 +727,20 @@ document.getElementById("updated2").innerHTML = str;
   display:none
 }
 
+@media (max-width: 575.98px) {
+.hideit{
+display:none
+}}
 
+.abouttext{font-family: Patrick Hand;  
+     font-size: 45px ;
+     font-weight:900; line-height:40px}
+  
+  @media (max-width: 575.98px) {
+.abouttex{
+font-size: 25px ;
+}}
+    
 .pointsection{
   color:black;
   font-size: 65px ;
