--- a/index.html
+++ b/index.html
@@ -431,7 +431,10 @@
                       <p class="texty2">“<span style= "font-family:Comic Neue;font-weight:900">Reach heART</span> believes in the power of human love and our innate desire to help one another heal and build bridges. That is why, through art, we connect with and support organizations that are out in the world doing just that.” </p>
                       <div class="row" >
                       <div class=col-md-6><a href="https://www.cscrb.org"><img src="images/logo1.png" width="100%" style="margin-top:5px"></a></div>
-                      <div class=col-md-6><a href="https://coachart.org"><img src="images/logo2.png" width="100%" style="margin-top:5px" ></a></div>
+                      <div class=col-md-6>
+                          <a href="https://coachart.org"><img src="images/logo2.png" width="100%" style="margin-top:5px" ></a>
+                          <a href="https://feastforall.org"><img src="images/logo3.png" width="100%" style="margin-top:5px" ></a>
+                          </div>
                     </div>
                     </div>
                 </div>
