--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                          style="z-index: 9999;  white-space: nowrap;  font-weight: 300; font-family: Didact Gothic; border-width:0px; " ><span style='font-size: 38px; color:black;font-weight:400; line-height:40px'> Virtual art lessons for people everywhere! </span></div>
 
 
-                         <div class="tp-caption tp-resizeme rs-parallaxlevel-10 hideit"
+                         <div class="tp-caption tp-resizeme rs-parallaxlevel-10 "
                                           id="slide-3238-layer-6"
                                                 data-x="['center','center','center','center']" data-hoffset="['-35','-35','-35','-35']"
                                                 data-y="['bottom','bottom','bottom','bottom']" data-voffset="['100','100','100','100']"
@@ -271,9 +271,9 @@
                                                 data-paddingbottom="[0,0,0,0]"
                                                 data-paddingleft="[0,0,0,0]"
                                                 style="z-index: 9999;">
-                                                <i class="icon-heart icon-extra-medium text-deep-pink " style='font-weight:900; font-size:80px'></i>
-                                                <i class="icon-heart icon-extra-medium " style='font-weight:900; color:#3ec1d3; font-size:80px'></i>
-                                                  <i class="icon-heart icon-extra-medium " style='font-weight:900; color:#ff9a00; font-size:80px'></i>
+                                                <i class="icon-heart icon-extra-medium text-deep-pink hideit" style='font-weight:900; font-size:80px'></i>
+                                                <i class="icon-heart icon-extra-medium hideit" style='font-weight:900; color:#3ec1d3; font-size:80px'></i>
+                                                  <i class="icon-heart icon-extra-medium hideit" style='font-weight:900; color:#ff9a00; font-size:80px'></i>
                                               </div>
 
 
@@ -288,7 +288,7 @@
                 <div class="container" >
                 <div class="row">
                       <div class="col-md-7 " >
-                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext" >About</span> <span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
+                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom " ><span class="abouttext">About</span></span> <span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
                                     <div class="separator-line-horrizontal-medium-light bg-deep-pink margin-10px-top"></div>
                                     <div class="col-md-12 wow fadeInRight " style="padding-bottom: 20px">
                                       <p class="text-medium text-extra-dark-gray  line-height-28 margin-30px-top"  style='font-family: Didact Gothic; font-size: 25px; font-weight:300;margin-bottom:40px;line-height:40px'><span style= "font-family:Comic Neue;font-weight:900">Reach heART</span>
@@ -739,7 +739,7 @@ display:none
      font-size: 45px ;
      font-weight:900; line-height:40px}
   
-  @media (max-width: 575.98px) {
+  @media (max-width:767.98px) {
 .abouttex{
 font-size: 25px ;
 }}
