--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <div class="container" >
                 <div class="row">
                       <div class="col-md-7 " >
-                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom " ><span class="abouttext">About</span></span> <span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
+                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext" >About<span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
                                     <div class="separator-line-horrizontal-medium-light bg-deep-pink margin-10px-top"></div>
                                     <div class="col-md-12 wow fadeInRight " style="padding-bottom: 20px">
                                       <p class="text-medium text-extra-dark-gray  line-height-28 margin-30px-top"  style='font-family: Didact Gothic; font-size: 25px; font-weight:300;margin-bottom:40px;line-height:40px'><span style= "font-family:Comic Neue;font-weight:900">Reach heART</span>
@@ -735,14 +735,14 @@ document.getElementById("updated2").innerHTML = str;
 display:none
 }}
 
-.abouttext{font-family: Patrick Hand;  
-     font-size: 45px ;
-     font-weight:900; line-height:40px}
+.abouttext{
+    font-family: Patrick Hand;  
+    font-size: 45px ;
+    font-weight:900; 
+    line-height:40px
+    }
   
-  @media (max-width:767.98px) {
-.abouttex{
-font-size: 35px ;
-}}
+
     
 .pointsection{
   color:black;
