--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <div class="container" >
                 <div class="row">
                       <div class="col-md-7 " >
-                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext" >About<span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
+                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext" >About<span class="unhideit"></br></span><span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
                                     <div class="separator-line-horrizontal-medium-light bg-deep-pink margin-10px-top"></div>
                                     <div class="col-md-12 wow fadeInRight " style="padding-bottom: 20px">
                                       <p class="text-medium text-extra-dark-gray  line-height-28 margin-30px-top"  style='font-family: Didact Gothic; font-size: 25px; font-weight:300;margin-bottom:40px;line-height:40px'><span style= "font-family:Comic Neue;font-weight:900">Reach heART</span>
@@ -742,6 +742,10 @@ display:none
     line-height:40px
     }
   
+@media (min-width: 575.98px) {
+.unhideit{
+display:none
+}}
 
     
 .pointsection{
