--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ if (colors.indexOf("orange") > -1) {
     str = str.replace(/T/g, '<span style="color:#ff9a00;font-family:Comic Neue;">T</span>');
 }
 if (colors.indexOf("green") > -1) {
-    str = str.replace(/about reach he/g, '<span style="color:black;font-family:Comic Neue;">About Reach he</span>');
+    str = str.replace(/about reach he/g, '<span style="color:black;font-family:Comic Neue;position:relative; right:-2px">About Reach he</span>');
 }
 
 
