--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
                 <div class="container" >
                 <div class="row">
                       <div class="col-md-7 " >
-                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext" >About<span class="unhideit"></br></span>
-                                     <span style= "font-family:Comic Neue;" id = 'content2'> Reach heART <span id="updated2"> </span></div>
+                                    <div class="alt-font  text-extra-dark-gray  margin-15px-bottom abouttext"  id = 'content2'>
+                                    About<span class="unhideit"></br></span>
+                                    Reach heART <span id="updated2"></div>
                                     <div class="separator-line-horrizontal-medium-light bg-deep-pink margin-10px-top"></div>
                                     <div class="col-md-12 wow fadeInRight " style="padding-bottom: 20px">
                                       <p class="text-medium text-extra-dark-gray  line-height-28 margin-30px-top"  style='font-family: Didact Gothic; font-size: 25px; font-weight:300;margin-bottom:40px;line-height:40px'><span style= "font-family:Comic Neue;font-weight:900">Reach heART</span>
@@ -586,7 +587,7 @@
             <div class="container" style='margin-top:0px'>
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center ">
-                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:#ff9a00">Contact Us!</span></span><br><br>
+                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:white">Contact Us!</span></span><br><br>
                   </div>
 
                 <!-- <form id="contact-form" action="javascript:void(0)" method="post"> -->
@@ -601,10 +602,10 @@
                         <!-- </div> -->
                     <!-- </div> -->
                 <!-- </form> -->
-                <div class="col-md-12 col-lg-9 col-md-10 text-center " >
-                    <div> <a href="mailto:reach1heart@gmail.com?subject=Mail" class='emailfont text-deep-pink'> reach1heart@gmail.com </a> </div>
-                    <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook text-deep-pink" aria-hidden="true" style='font-size: 50px; padding:10px; margin-top:30px'></i></a>
-                    <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram text-deep-pink"  style='font-size: 50px; padding:10px; margin-top:30px'></i></a>
+                <div class="col-md-12 col-lg-9 col-md-10 text-center " style="background-color:#3ec1d3!important">
+                    <div> <a href="mailto:reach1heart@gmail.com?subject=Mail" class='emailfont '> reach1heart@gmail.com </a> </div>
+                    <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook" aria-hidden="true" style='font-size: 50px; padding:10px; margin-top:30px; color:white'></i></a>
+                    <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram "  style='font-size: 50px; padding:10px; margin-top:30px; color:white'></i></a>
                 </div>
                 </div>
             </div>
@@ -618,7 +619,7 @@
           <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-12 col-md-12 text-center text-white-2 shiftcolor" style="font-weight:900; font-family:Didact Gothic; font-size:17px">
+                    <div class="col-lg-12 col-md-12 text-center text-white-2 " style="font-weight:900; font-family:Didact Gothic; font-size:17px">
                         <span>Website Design:<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""> Calibri Inc.</a></span><br>
                         <span> <a href="mailto:info@calibri.co?subject=Mail" class="text-white-2" target="_blank" title=""> info@calibri.co </a></span>
                         <span>|<a href="https://calibri.co/" class="text-white-2" target="_blank" title=""> calibri.co</a></span><br>
@@ -711,7 +712,7 @@ if (colors.indexOf("orange") > -1) {
     str = str.replace(/T/g, '<span style="color:#ff9a00;font-family:Comic Neue;">T</span>');
 }
 if (colors.indexOf("green") > -1) {
-    str = str.replace(/Reach he/g, '<span style="color:black;font-family:Comic Neue;">Reach he</span>');
+    str = str.replace(/About Reach he/g, '<span style="color:black;font-family:Comic Neue;">About Reach he</span>');
 }
 
 document.getElementById("updated2").innerHTML = str;
