--- a/index.html
+++ b/index.html
@@ -288,7 +288,13 @@
                 <div class="container" >
                 <div class="row">
                       <div class="col-md-7 " >
-                                     <div class="alt-font  text-extra-dark-gray  margin-15px-bottom"  style='font-family: Patrick Hand;  font-size: 45px ;font-weight:900; line-height:40px'>About</span><span class="unhideit"></br></span><span style= "font-family:Comic Neue;"> Reach he</span><span id = 'content2'>ART </span> <span id="updated2"> </span></div>
+                                     <div class="alt-font  text-extra-dark-gray  margin-15px-bottom"  style='font-family: Patrick Hand;  font-size: 45px ;font-weight:900; line-height:40px'>About</span><span class="unhideit"></br></span>
+                                      <span style= "font-family:Comic Neue;"> Reach he</span>
+                                      <span style="color:#ff165d;font-family:Comic Neue;position:relative;right:7px">A</span>
+                                      <span style="color:#3ec1d3;font-family:Comic Neue;position:relative;right:15px">R</span>
+                                      <span style="color:#ff9a00;font-family:Comic Neue;position:relative;right:25px">T</span>
+                    
+                    </div>
 
                                     <div class="separator-line-horrizontal-medium-light bg-deep-pink margin-10px-top"></div>
                                     <div class="col-md-12 wow fadeInRight " style="padding-bottom: 20px">
