--- a/index.html
+++ b/index.html
@@ -559,14 +559,14 @@
             <div class="container" style='margin-top:0px'>
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center " data-color="6" >
-                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection" style="background-color:#3ec1d3!important; padding:0px" ><span style="color:white">Contact Us!</span></span><br><br>
+                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:white;-webkit-text-stroke: 2px #3ec1d3;">Contact Us!</span></span><br><br>
                   </div>
 
             
-                <div class="col-md-12 col-lg-9 col-md-10 text-center " style="background-color:#3ec1d3!important; padding:30px" data-color="6" >
+                <div class="col-md-12 col-lg-9 col-md-10 text-center "data-color="6" >
                     <div> <a href="mailto:reach1heart@gmail.com?subject=Mail" class='emailfont '> reach1heart@gmail.com </a> </div>
-                    <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook" aria-hidden="true" style='font-size: 50px; padding:10px; margin-top:30px; color:white'></i></a>
-                    <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram "  style='font-size: 50px; padding:10px; margin-top:30px; color:white'></i></a>
+                    <a href="https://www.facebook.com/REACH-HEART-102506281403707" title="Facebook" target="_blank"><i class="fab fa-facebook" aria-hidden="true" style='font-size: 50px; padding:10px; margin-top:30px; color:white;-webkit-text-stroke: 2px #3ec1d3;'></i></a>
+                    <a href="https://www.instagram.com/reach1heart/" title="Dribbble" target="_blank"><i class="fab fa-instagram "  style='font-size: 50px; padding:10px; margin-top:30px; color:white;-webkit-text-stroke: 2px #3ec1d3;'></i></a>
                 </div>
                 </div>
             </div>
@@ -839,26 +839,32 @@ box-shadow: none; border-radius:0px; height: 100px; width:70%
 
 .emailfont{
 font-family: 'Didact Gothic'; font-weight:900; font-size:45px; padding:50px; color:white; text-decoration: underline;
+    -webkit-text-stroke: 2px #3ec1d3;
 }
 @media (min-width: 1200px) {
 .emailfont{
 font-family: 'Didact Gothic'; font-weight:900; font-size:45px; padding:50px; color:white; text-decoration: underline;
+    -webkit-text-stroke: 2px #3ec1d3;
 }}
 @media (min-width: 992px) and (max-width: 1199.98px) {
 .emailfont{
 font-family: 'Didact Gothic'; font-weight:900; font-size:35px; padding:50px; color:white; text-decoration: underline;
+    -webkit-text-stroke: 2px #3ec1d3;
 }}
 @media (min-width: 768px) and (max-width: 991.98px) {
 .emailfont{
 font-family: 'Didact Gothic'; font-weight:900; font-size:35px; padding:50px; color:white; text-decoration: underline;
+    -webkit-text-stroke: 2px #3ec1d3;
 }}
 @media (min-width: 576px) and (max-width: 767.98px) {
 .emailfont{
 font-family: 'Didact Gothic'; font-weight:900; font-size:20px; padding:10px; color:white; text-decoration: underline;
+    -webkit-text-stroke: 2px #3ec1d3;
 }}
 @media (max-width: 575.98px) {
 .emailfont{
 font-family: 'Didact Gothic'; font-weight:900; font-size:20px; padding:10px; color:white; text-decoration: underline;
+    -webkit-text-stroke: 2px #3ec1d3;
 }}
 
 
