--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             <div class="container" style='margin-top:0px'>
                 <div class="row justify-content-center">
                   <div class="col-12 col-lg-9 col-md-10 text-center " data-color="6" >
-                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:white;" class="shadow20" >Contact Us!</span></span><br><br>
+                    <span class="alt-font text-medium margin-5px-bottom d-block pointsection"  ><span style="color:white;padding:20px" class="shadow20" >Contact Us!</span></span><br><br>
                   </div>
 
             
@@ -841,33 +841,32 @@ box-shadow: none; border-radius:0px; height: 100px; width:70%
 
 
 .emailfont{
-font-family: 'Didact Gothic'; font-weight:900; font-size:45px; padding:50px; color:white; text-decoration: underline;
-  background-color:#3ec1d3;
+font-family: 'Didact Gothic'; font-weight:900; font-size:45px; padding:50px; color:white; 
+ 
 }
 @media (min-width: 1200px) {
 .emailfont{
-font-family: 'Didact Gothic'; font-weight:900; font-size:45px; padding:50px; color:white; text-decoration: underline;
-  background-color:#3ec1d3;
+font-family: 'Didact Gothic'; font-weight:900; font-size:45px; padding:50px; color:white; 
+ 
 }}
 @media (min-width: 992px) and (max-width: 1199.98px) {
 .emailfont{
-font-family: 'Didact Gothic'; font-weight:900; font-size:35px; padding:50px; color:white; text-decoration: underline;
-  background-color:#3ec1d3;
+font-family: 'Didact Gothic'; font-weight:900; font-size:35px; padding:50px; color:white; 
+ 
 }}
 @media (min-width: 768px) and (max-width: 991.98px) {
 .emailfont{
-font-family: 'Didact Gothic'; font-weight:900; font-size:35px; padding:50px; color:white; text-decoration: underline;
-  background-color:#3ec1d3;
+font-family: 'Didact Gothic'; font-weight:900; font-size:35px; padding:50px; color:white; 
+  
 }}
 @media (min-width: 576px) and (max-width: 767.98px) {
 .emailfont{
-font-family: 'Didact Gothic'; font-weight:900; font-size:20px; padding:10px; color:white; text-decoration: underline;
-    background-color:#3ec1d3;
+font-family: 'Didact Gothic'; font-weight:900; font-size:20px; padding:10px; color:white; 
 }}
 @media (max-width: 575.98px) {
 .emailfont{
-font-family: 'Didact Gothic'; font-weight:900; font-size:20px; padding:10px; color:white; text-decoration: underline;
-    background-color:#3ec1d3;
+font-family: 'Didact Gothic'; font-weight:900; font-size:20px; padding:10px; color:white;
+  
 }}
 
 
