--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
                                  
                                   <div class = "col-md-12" align='center>
                                     <button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px;  margin-bottom:20px; color:white; font-weight:600;background-color:#ff9a00">
-                                                                  <a href="mailto:reach1heart@gmail.com?subject=Mail" style="color:white">
+                                     <a href="mailto:reach1heart@gmail.com?subject=Mail" style="color:white">
                                     Click Here to Register /<br> More Information
                                     </a></button>
-                                  <img src="images/newflyer.jpg" width="100%" style="margin-top:5px" >
+                                  <img src="images/newflyer.png" style="margin-top:5px; width:100%" >
                                   </div>
 
                                 </div>
