--- a/index.html
+++ b/index.html
@@ -387,8 +387,10 @@
               </div>
              </div>
            </div>
-            <div class="row">
+           <div class="row justify-content-center">
                  <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: none; border-radius:0px;margin-top:50px'  >
+                     <div class="testimonia-block width-90 sm-width-100 mx-auto" >
+                     <div class="bg-white text-center padding-60px-all border-radius-6 sm-padding-20px-all" style='box-shadow: none; border-radius:0px;'  >
                      <div class= 'row' style=' padding-bottom:10px; padding-top:10px; background:white; '>
                             <div class = "col-md-12" align='center'>
                                     <button  class="btn-info btn btn-small button border-radius-4 margin-5px-all lg-margin-15px-bottom d-table d-lg-inline-block md-margin-lr-auto" style="font-size:17px;  margin-bottom:20px; color:white; font-weight:600;background-color:#ff9a00">
@@ -398,6 +400,7 @@
                                   <img src="images/newflyer.png" style="margin-top:5px; width:100%" >
                             </div>
                     </div>
+                         </div></div>
                 </div>
             </div>
       </div>
