--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                             <li class="dropdown megamenu-fw">
                                 <a href="#contact" style='font-family: Didact Gothic; font-size: 20px;font-weight:500; text-transform:none'>Contact</a>
                             </li>
+                             <li class="dropdown megamenu-fw">
+                                <a href="http://voyagela.com/interview/daily-inspiration-meet-angie-madama-ladabouche/?fbclid=IwAR2qDI-ft4CgiWRpC05Nt7HegRvsbb6tTosfRVDu-ZU9JIHK0aAalYs1Pa0" style='font-family: Didact Gothic; font-size: 20px;font-weight:500; text-transform:none'>Press</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
